enovy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: backend
          image: harishnshetty/backend-signed:latest
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"
            requests:
              memory: "64Mi"
              cpu: "128m"
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
