enovy/mysqldb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql
  replicas: 1 # IMPORTANT: single instance unless clustering enabled
  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      securityContext:
        fsGroup: 999

      containers:
        - name: mysql
          image: harishnshetty/mysql:2
          args: ["--ignore-db-dir=lost+found"]
          imagePullPolicy: Always

          ports:
            - containerPort: 3306

          securityContext:
            runAsUser: 999
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql

          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - "-h"
                - localhost
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 10
            periodSeconds: 5

  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
