enovy/gateway-dns.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: gateway
  annotations:
    # argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    cert-manager.io/cluster-issuer: letsencrypt-route53
spec:
  gatewayClassName: external-gatewayclass

  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      hostname: "*.harishshetty.xyz"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: harishshetty-tls
            namespace: gateway
# spec:
#   gatewayClassName: external-gatewayclass
#   listeners:
#     - name: http
#       port: 80
#       protocol: HTTP
#       allowedRoutes:
#         namespaces:
#           from: All
#     - name: https
#       hostname: "*.harishshetty.xyz"
#       port: 443
#       protocol: HTTPS
#       allowedRoutes:
#         namespaces:
#           from: All
#       tls:
#         certificateRefs:
#           - kind: Secret
#             group: ""
#             name: "mygateway-cert"
#             namespace: gateway
