enovy/app2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iphone
  namespace: default
spec:
  selector:
    matchLabels:
      app: iphone
  replicas: 2
  template:
    metadata:
      labels:
        app: iphone
    spec:
      containers:
        - image: harishnshetty/iphone:latest
          name: iphone
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: iphone-svc
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: iphone
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iphone-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - iphone.harishshetty.xyz
  rules:
    - backendRefs:
        - kind: Service
          name: iphone-svc
          port: 80
